@@ -12,7 +12,7 @@
 .\" software for any purpose.  It is provided "as is" without express or
 .\" implied warranty.
 .\"----------------------------------------------------------------------------
-.\" $Id: TclX.n,v 5.11 1996/03/17 06:51:54 markd Exp $
+.\" $Id: TclX.n,v 5.12 1996/03/17 08:48:35 markd Exp $
 .\"----------------------------------------------------------------------------
 .\"
 .TH "TclX" TCL "" "Tcl"
@@ -84,7 +84,7 @@ This procedure lists the directories in the directory stack.
 '\"@help: tcl/control/commandloop
 '\"@brief: Create an interactive command loop or event based command reader.
 f.TP
-.B commandloop  ?\fB-async\fR? ?\fB-interactive \fBon|off|tty\fR? ?\fB-prompt1 \fIcmd\fR? ?\fB-prompt2 \fIcmd\fR? ?\fB-endcommand \fIcmd\fR?
+.B commandloop ?\fB-async\fR? ?\fB-interactive \fBon|off|tty\fR? ?\fB-prompt1 \fIcmd\fR? ?\fB-prompt2 \fIcmd\fR? ?\fB-endcommand \fIcmd\fR?
 .br
 Create an interactive command loop reading commands from stdin and writing
 results to stdout.  Command loops are maybe either be blocking or event
@@ -2505,26 +2505,48 @@ for commands.
 Contains code to run to output the prompt used when interactively prompting
 for continuation of an incomplete command.
 .TP
-.B tclx_errorHandler
-If this variable is set to the name of a procedure, that procedure will be
-call if an uncaught error occurs.
-The procedure will be passed a single argument of the error message, however
-to allow future expansion, the procedure should have a final argument of
-\fBargs\fR.
-The procedure is only called in non-interactive shells.
+.B TCLXENV
+Array that contains information used internally by various Tcl procedures that
+are part of the TclX shell.  Don't change this array unless you know what
+your doing.
+'\"@endhelp
+'
+'\"@help: tcl/control/tclx_errorHandler
+'\"@brief: Command to handle Uncaught errors.
+.B tclx_errorHandler \fImessage\fR
+.br
+The \fBtclx_errorHandler\fR command doesn't exist as built-in part of TclX.
+Instead, individual applications or  users  can  define  a
+\fBtclx_errorHandler\fR  command (e.g. as a Tcl procedure) if they wish to
+handle uncaught errors.
+The procedure will be passed a single argument of the
+error \fImessage\fR, with \fBerrorCode\fR and \fBerrorInfo\fR having values
+reflecting the error that occurred.
+.sp
+The \fBtclx_errorHandler\fR command is called when an error that is not
+caught returns to the top level command evaluation in the TclX shell or
+\fBwishx\fR.
+The difference between \fBtclx_errorHandler\fR and \fBbgerror\fR is that
+\fBtclx_errorHandler\fR is called during the synchronous execution of a
+script while \fBbgerror\fR is called as a result of an uncaught error
+in an event handler.  In a non-event oriented Tcl script
+\fBtclx_errorHandler\fR will be called on all errors that are not caught and
+\fBbgerror\fR is not used.
+In a \fBwishx\fR script or event oriented script executed with the TclX
+shell, \fBtclx_errorHandler\fR will be called on uncaught errors during the
+execution of the main script that set up the event oriented program.
+Once the event loop is entered, \fBbgerror\fR will be called on uncaught
+errors.
+.sp
+This procedure is not called in response to commands entered via an interactive
+command loop, only from the evaluation of scripts or Tcl commands passed via
+the command line.
 If the procedure returns normally, the program will just exit without any
 error being issued by the shell.
 Generally the procedure should exit with a non-zero exit code once the error
 has been processed.
 It is not possible to continue executing the code in which the error occurred.
 This is useful for logging \fBerrorInfo\fR or e-mailing it to the maintainer.
-.sp
-Note, 
-.TP
-.B TCLXENV
-Array that contains information used internally by various Tcl procedures that
-are part of the TclX shell.  Don't change this array unless you know what
-your doing.
 '\"@endhelp
 '
 '\"@help: tcl/variables/mainloop
